add HA architecture

--- a/cloudformation/VPC.yml
+++ b/cloudformation/VPC.yml
@@ -10,7 +10,7 @@ Parameters:
   
   ApplicationName:
     Type: String
-    Default: httpd
+    Default: wordpress
   
   VPCCIDR:
     Type: String
